# TINspeak

./: .gitignore  AudioDecoderOpus.cpp  AudioDecoderOpus.h  AudioEncoderOpus.cpp  AudioEncoderOpus.h  AudioFrame.h  AudioGrabberALSA.cpp  AudioGrabberALSA.h  AudioGrabberTest.cpp  AudioReplayALSA.cpp  AudioReplayALSA.h  AudioReplayTest.cpp  AudioSignalParams.h  AudioTest.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientRTP.cpp  ClientRTP.h  EncodedAudio.h  IAudioDecoded.h  IAudioFrameProducer.h  IClientCallback.h  Log.cpp  Log.h  MyRTPSession.h  README.md  sha256.cpp  sha256.h
server/: EncodedAudio.h  make.sh  server.cpp
src/: AudioEncoderOpus.cpp  AudioEncoderOpus.h  AudioGrabberALSA.cpp  AudioReplayALSA.cpp  AudioSignalParams.h  AudioTest.cpp  ClientRTP.h  EncodedAudio.h  IAudioFrameProducer.h  RTPClient.cpp  RTPClient.h
test_client/: 10lovers.raw  AudioEncoderOpus.cpp  AudioEncoderOpus.h  AudioFrame.h  EncodedAudio.h  IAudioEncoded.h  client.cpp  make.sh  multi.sh  pathofwind.raw  promentory.raw
